// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentCardGroup renders correctly with a children 1`] = `
<DocumentFragment>
  .css-rc1vo0-StyledWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border-radius: 4px;
  border: 1px solid #d9dadd;
  background: #ffffff;
  min-width: 0;
}

.css-xlsc0t-StyledWrapper {
  padding: 24px;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: 100%;
}

.css-xlsc0t-StyledWrapper:not(:first-child) {
  border-top: 1px solid #d9dadd;
}

.css-xlsc0t-StyledWrapper:first-child {
  border-radius: 4px 4px 0 0;
}

.css-xlsc0t-StyledWrapper:last-child {
  border-radius: 0 0 4px 4px;
}

.css-xlsc0t-StyledWrapper .eqcw8nr2 {
  background: #f9f9fa;
}

.css-xlsc0t-StyledWrapper:hover {
  background: #e9eaeb;
}

.css-xlsc0t-StyledWrapper:hover .eqcw8nr2 {
  background: none;
}

.css-17tit68-FullHeightStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  height: 100%;
}

.css-1rd9aap-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  min-width: 0;
}

.css-1j4n8wo {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.css-1vvrw62-IconWrapper {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background: #f9f9fa;
  padding: 8px;
  border-radius: 4px;
}

.css-7ie8u6-sizeStyles {
  vertical-align: middle;
  fill: #3f4250;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<div
    class="css-rc1vo0-StyledWrapper e1393dgx0"
  >
    <a
      class="css-xlsc0t-StyledWrapper eqcw8nr1"
      href="http://scaleway.com"
      target="_parent"
    >
      <div
        class="css-17tit68-FullHeightStack eqcw8nr0"
      >
        <div
          class="css-1rd9aap-StyledStack eqcw8nr3"
        >
          <div>
            <h3
              class="css-1j4n8wo e13y3mga0"
            />
          </div>
          <div>
            test
          </div>
        </div>
        <div
          class="css-1vvrw62-IconWrapper eqcw8nr2"
        >
          <svg
            class="css-7ie8u6-sizeStyles e1gt4cfo0"
            viewBox="0 0 24 24"
          >
            <path
              d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
            />
          </svg>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`ContentCardGroup renders correctly with description 1`] = `
<DocumentFragment>
  .css-rc1vo0-StyledWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border-radius: 4px;
  border: 1px solid #d9dadd;
  background: #ffffff;
  min-width: 0;
}

.css-xlsc0t-StyledWrapper {
  padding: 24px;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: 100%;
}

.css-xlsc0t-StyledWrapper:not(:first-child) {
  border-top: 1px solid #d9dadd;
}

.css-xlsc0t-StyledWrapper:first-child {
  border-radius: 4px 4px 0 0;
}

.css-xlsc0t-StyledWrapper:last-child {
  border-radius: 0 0 4px 4px;
}

.css-xlsc0t-StyledWrapper .eqcw8nr2 {
  background: #f9f9fa;
}

.css-xlsc0t-StyledWrapper:hover {
  background: #e9eaeb;
}

.css-xlsc0t-StyledWrapper:hover .eqcw8nr2 {
  background: none;
}

.css-17tit68-FullHeightStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  height: 100%;
}

.css-1rd9aap-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  min-width: 0;
}

.css-1j4n8wo {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.css-1nqw819 {
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.css-1vvrw62-IconWrapper {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background: #f9f9fa;
  padding: 8px;
  border-radius: 4px;
}

.css-7ie8u6-sizeStyles {
  vertical-align: middle;
  fill: #3f4250;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<div
    class="css-rc1vo0-StyledWrapper e1393dgx0"
  >
    <a
      class="css-xlsc0t-StyledWrapper eqcw8nr1"
      href="http://scaleway.com"
      target="_blank"
    >
      <div
        class="css-17tit68-FullHeightStack eqcw8nr0"
      >
        <div
          class="css-1rd9aap-StyledStack eqcw8nr3"
        >
          <div>
            <h3
              class="css-1j4n8wo e13y3mga0"
            >
              title
            </h3>
          </div>
          <p
            class="css-1nqw819 e13y3mga0"
          >
            description
          </p>
        </div>
        <div
          class="css-1vvrw62-IconWrapper eqcw8nr2"
        >
          <svg
            class="css-7ie8u6-sizeStyles e1gt4cfo0"
            viewBox="0 0 24 24"
          >
            <path
              d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
            />
          </svg>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`ContentCardGroup renders correctly with link target _parent 1`] = `
<DocumentFragment>
  .css-rc1vo0-StyledWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border-radius: 4px;
  border: 1px solid #d9dadd;
  background: #ffffff;
  min-width: 0;
}

.css-xlsc0t-StyledWrapper {
  padding: 24px;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: 100%;
}

.css-xlsc0t-StyledWrapper:not(:first-child) {
  border-top: 1px solid #d9dadd;
}

.css-xlsc0t-StyledWrapper:first-child {
  border-radius: 4px 4px 0 0;
}

.css-xlsc0t-StyledWrapper:last-child {
  border-radius: 0 0 4px 4px;
}

.css-xlsc0t-StyledWrapper .eqcw8nr2 {
  background: #f9f9fa;
}

.css-xlsc0t-StyledWrapper:hover {
  background: #e9eaeb;
}

.css-xlsc0t-StyledWrapper:hover .eqcw8nr2 {
  background: none;
}

.css-17tit68-FullHeightStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  height: 100%;
}

.css-1rd9aap-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  min-width: 0;
}

.css-1j4n8wo {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.css-1vvrw62-IconWrapper {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background: #f9f9fa;
  padding: 8px;
  border-radius: 4px;
}

.css-7ie8u6-sizeStyles {
  vertical-align: middle;
  fill: #3f4250;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<div
    class="css-rc1vo0-StyledWrapper e1393dgx0"
  >
    <a
      class="css-xlsc0t-StyledWrapper eqcw8nr1"
      href="http://scaleway.com"
      target="_parent"
    >
      <div
        class="css-17tit68-FullHeightStack eqcw8nr0"
      >
        <div
          class="css-1rd9aap-StyledStack eqcw8nr3"
        >
          <div>
            <h3
              class="css-1j4n8wo e13y3mga0"
            >
              title
            </h3>
          </div>
        </div>
        <div
          class="css-1vvrw62-IconWrapper eqcw8nr2"
        >
          <svg
            class="css-7ie8u6-sizeStyles e1gt4cfo0"
            viewBox="0 0 24 24"
          >
            <path
              d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
            />
          </svg>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`ContentCardGroup renders correctly with loading prop 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.css-rc1vo0-StyledWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border-radius: 4px;
  border: 1px solid #d9dadd;
  background: #ffffff;
  min-width: 0;
}

.css-1d4gwso-StyledWrapper {
  padding: 24px;
}

.css-1d4gwso-StyledWrapper:not(:first-child) {
  border-top: 1px solid #d9dadd;
}

.css-1ddph7r {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1t7ypwa {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-158ltsb {
  position: relative;
  width: 100%;
  overflow: hidden;
  cursor: progress;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: column;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  height: 100%;
}

.css-1ccwz2y {
  height: 12px;
  width: 120px;
  max-width: 100%;
  border-radius: 8px;
  background-color: #e9eaeb;
}

.css-171fx8 {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #f9f9fa00,
      #f9f9fa4D,
      #f9f9fa66,
      #f9f9fa4D,
      #f9f9fa00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .css-171fx8 {
    -webkit-animation: unset;
    animation: unset;
  }
}

.css-1pcpyjh-StyledSquareSkeleton {
  position: relative;
  width: 100%;
  overflow: hidden;
  cursor: progress;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: column;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  height: 100%;
  height: 32px;
  width: 32px;
  border-radius: 4px;
}

.css-1lyaq9u {
  height: 100%;
  width: 100%;
  max-width: 100%;
  background-color: #e9eaeb;
}

<div
    class="css-rc1vo0-StyledWrapper e1393dgx0"
  >
    <div
      class="css-1d4gwso-StyledWrapper e1xovou51"
    >
      <div
        class="css-1ddph7r ehpbis70"
      >
        <div
          class="css-1t7ypwa ehpbis70"
        >
          <div
            aria-busy="true"
            aria-live="polite"
            class="css-158ltsb e183x2r81"
          >
            <div
              class="css-1ccwz2y e1denkbe0"
            />
            <div
              class="css-171fx8 e183x2r80"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="css-158ltsb e183x2r81"
          >
            <div
              class="css-1ccwz2y e1denkbe0"
            />
            <div
              class="css-171fx8 e183x2r80"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="css-158ltsb e183x2r81"
          >
            <div
              class="css-1ccwz2y e1denkbe0"
            />
            <div
              class="css-171fx8 e183x2r80"
            />
          </div>
        </div>
        <div
          aria-busy="true"
          aria-live="polite"
          class="e1xovou50 css-1pcpyjh-StyledSquareSkeleton e183x2r81"
        >
          <div
            class="css-1lyaq9u e1uz28830"
          />
          <div
            class="css-171fx8 e183x2r80"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ContentCardGroup renders correctly with required title & hread 1`] = `
<DocumentFragment>
  .css-rc1vo0-StyledWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border-radius: 4px;
  border: 1px solid #d9dadd;
  background: #ffffff;
  min-width: 0;
}

.css-xlsc0t-StyledWrapper {
  padding: 24px;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: 100%;
}

.css-xlsc0t-StyledWrapper:not(:first-child) {
  border-top: 1px solid #d9dadd;
}

.css-xlsc0t-StyledWrapper:first-child {
  border-radius: 4px 4px 0 0;
}

.css-xlsc0t-StyledWrapper:last-child {
  border-radius: 0 0 4px 4px;
}

.css-xlsc0t-StyledWrapper .eqcw8nr2 {
  background: #f9f9fa;
}

.css-xlsc0t-StyledWrapper:hover {
  background: #e9eaeb;
}

.css-xlsc0t-StyledWrapper:hover .eqcw8nr2 {
  background: none;
}

.css-17tit68-FullHeightStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  height: 100%;
}

.css-1rd9aap-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  min-width: 0;
}

.css-1j4n8wo {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.css-1vvrw62-IconWrapper {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background: #f9f9fa;
  padding: 8px;
  border-radius: 4px;
}

.css-7ie8u6-sizeStyles {
  vertical-align: middle;
  fill: #3f4250;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<div
    class="css-rc1vo0-StyledWrapper e1393dgx0"
  >
    <a
      class="css-xlsc0t-StyledWrapper eqcw8nr1"
      href="http://scaleway.com"
      target="_blank"
    >
      <div
        class="css-17tit68-FullHeightStack eqcw8nr0"
      >
        <div
          class="css-1rd9aap-StyledStack eqcw8nr3"
        >
          <div>
            <h3
              class="css-1j4n8wo e13y3mga0"
            >
              title
            </h3>
          </div>
        </div>
        <div
          class="css-1vvrw62-IconWrapper eqcw8nr2"
        >
          <svg
            class="css-7ie8u6-sizeStyles e1gt4cfo0"
            viewBox="0 0 24 24"
          >
            <path
              d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
            />
          </svg>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`ContentCardGroup renders correctly with subtitle 1`] = `
<DocumentFragment>
  .css-rc1vo0-StyledWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border-radius: 4px;
  border: 1px solid #d9dadd;
  background: #ffffff;
  min-width: 0;
}

.css-xlsc0t-StyledWrapper {
  padding: 24px;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: 100%;
}

.css-xlsc0t-StyledWrapper:not(:first-child) {
  border-top: 1px solid #d9dadd;
}

.css-xlsc0t-StyledWrapper:first-child {
  border-radius: 4px 4px 0 0;
}

.css-xlsc0t-StyledWrapper:last-child {
  border-radius: 0 0 4px 4px;
}

.css-xlsc0t-StyledWrapper .eqcw8nr2 {
  background: #f9f9fa;
}

.css-xlsc0t-StyledWrapper:hover {
  background: #e9eaeb;
}

.css-xlsc0t-StyledWrapper:hover .eqcw8nr2 {
  background: none;
}

.css-17tit68-FullHeightStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  height: 100%;
}

.css-1rd9aap-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  min-width: 0;
}

.css-zitw5 {
  color: #727683;
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.css-1j4n8wo {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.css-1vvrw62-IconWrapper {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background: #f9f9fa;
  padding: 8px;
  border-radius: 4px;
}

.css-7ie8u6-sizeStyles {
  vertical-align: middle;
  fill: #3f4250;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<div
    class="css-rc1vo0-StyledWrapper e1393dgx0"
  >
    <a
      class="css-xlsc0t-StyledWrapper eqcw8nr1"
      href="http://scaleway.com"
      target="_blank"
    >
      <div
        class="css-17tit68-FullHeightStack eqcw8nr0"
      >
        <div
          class="css-1rd9aap-StyledStack eqcw8nr3"
        >
          <div>
            <h5
              class="css-zitw5 e13y3mga0"
            >
              subtitle
            </h5>
            <h3
              class="css-1j4n8wo e13y3mga0"
            >
              title
            </h3>
          </div>
        </div>
        <div
          class="css-1vvrw62-IconWrapper eqcw8nr2"
        >
          <svg
            class="css-7ie8u6-sizeStyles e1gt4cfo0"
            viewBox="0 0 24 24"
          >
            <path
              d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
            />
          </svg>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;
